# impl_twice

./: Cargo.toml  README.md
src/: lib.rs
